# Trabajos_ALSE

./: kk.c
Taller/: meteodB.cpp  meteodB.h
clase/Fig_Geometricas/Sin_herencia/: Circulo.h:Zone.Identifier
clase/Fig_Geometricas/fig_geometricas_her/: Circulo.cpp  main.cpp
clase/curso/: estudiante.cpp  estudiante.h  main.cpp
clase/eje_4/: histo  histograma.cpp
clase/eje_5/: CMakeLists.txt  clasificar.cpp
clase/eje_6/: polinomios.cpp
curso_dickson/: estudiante.cpp  estudiante.h  main.cpp  persona.cpp  persona.h
fig_geometricas_her/: Circulo.cpp  Circulo.h  Geometrica.h  main.cpp
parcial/1/: funcion.h
taller/: CMakeLists.txt  CMakeLists.txt:Zone.Identifier  main.cpp  meteo.als  taller._dick.h  taller_dick.cpp
trabajo_1/: histo.cpp
